Corrección de traducción

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -95,7 +95,7 @@
                 "Dec": "Dic"
             },
             "viewMode": {
-                "yearToday": "Año actual",
+                "yearToday": "Hasta hoy",
                 "fullYear": "Año completo"
             }
         },
