--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,6 +31,7 @@
             "error": {
                 "generic": "An error occurred",
                 "saving": "Error saving changes",
+                "updating": "Error updating",
                 "deleting": "Error deleting",
                 "required": "This field is required",
                 "loading": "Error loading data",
